Unit test for project